# agent-of-empires

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  justfile  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: docker.yml  docs.yml
assets/: demo.tape
docker/: Dockerfile.deno  Dockerfile.dev  Dockerfile.full  Dockerfile.golang  Dockerfile.node  Dockerfile.python  Dockerfile.rust
docs/: SUMMARY.md  faq.md  index.md  quick-start.md  roadmap.md  troubleshooting.md
docs/guides/: configuration.md  diff-view.md  repo-config.md  sandbox.md  security.md  workflow.md  worktrees.md
examples/: README.md
examples/custom-dockerfile/: Dockerfile
examples/custom-dockerfile/.aoe/: config.toml
examples/fellowship/: manifest.toml
examples/matrix/: manifest.toml
examples/mongols/: manifest.toml
examples/monorepo/.aoe/: config.toml
examples/node-project/.aoe/: config.toml
examples/python-project/.aoe/: config.toml
examples/romans/: manifest.toml
examples/rust-project/.aoe/: config.toml
examples/spartans/: manifest.toml
examples/starfleet/: manifest.toml
examples/zerg/: manifest.toml
scripts/: build-site.sh  capture-fixtures.sh
specs/001-integration-tests/: plan.md  spec.md  tasks.md
src/: lib.rs  main.rs  terminal.rs
src/cli/: add.rs  definition.rs  import.rs  init.rs  mod.rs  remove.rs  session.rs  status.rs
src/context/: mod.rs  templates.rs
src/docker/: mod.rs
src/git/: diff.rs
src/mcppool/: mod.rs
src/process/: linux.rs  macos.rs  mod.rs
src/session/: builder.rs  config.rs  instance.rs  mod.rs  repo_config.rs
src/tmux/: session.rs  status_bar.rs  terminal_session.rs
src/tui/: app.rs  creation_poller.rs  deletion_poller.rs  home.rs  mod.rs  status_poller.rs
src/tui/components/: help.rs  preview.rs
src/tui/dialogs/: changelog.rs  (+4 more)
src/update/: mod.rs
tests/: config_merge.rs  group_persistence.rs  migration_pipeline.rs  process_detection.rs  profile_management.rs  repo_config.rs  session_lifecycle.rs  status_detection.rs
website/: .gitignore  astro.config.mjs  index.html  package-lock.json  package.json  robots.txt  sitemap.xml
website/public/: main.js  styles.css
(+23 files in other folders)
