[workspace]
members = [".", "xtask"]

[package]
name = "agent-of-empires"
version = "0.10.0"
edition = "2021"
rust-version = "1.74"
authors = ["Agent of Empires Contributors"]
description = "Terminal session manager for AI coding agents"
license = "MIT"
repository = "https://github.com/njbrake/agent-of-empires"
keywords = ["tmux", "tui", "ai", "claude", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# TUI
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
tui-textarea = "0.7"
tui-input = "0.11"

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# File watching
notify = "7.0"

# PTY handling
portable-pty = "0.8"

# Fuzzy matching
nucleo-matcher = "0.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.11", features = ["v4"] }

# Random
rand = "0.8"

# Directory utilities
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client (for updates)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Unix sockets
tokio-util = { version = "0.7", features = ["codec"] }

# Platform detection
cfg-if = "1.0"

# Process handling
nix = { version = "0.29", features = ["signal", "process"] }

# Unicode width
unicode-width = "0.2"

# Regex
regex = "1.10"

# Git operations
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Diff computation
similar = "2.6"

# Hashing
sha2 = "0.10"

# File locking
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.14"
serial_test = "3.2"
cargo-husky = { version = "1", default-features = false, features = ["precommit-hook", "run-cargo-fmt", "run-cargo-clippy"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16

[[bin]]
name = "aoe"
path = "src/main.rs"
